# python-starter

./: .flake8  .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
python_starter/: config.py  main.py
tests/: test_main.py
